Add accumulo installation